# Messenger-ALYOsha

./: .clangd  .dockerignore  .env.example  .gitattributes  .gitignore  Makefile  README.md  compile_commands.json  deploy.sh  docker-compose.yml
.github/instructions/: instructions.md
.github/workflows/: ci.yml
client/: CMakeLists.txt  Dockerfile
client/include/: AuthManager.hpp  ChatManager.hpp  ConnectionManager.hpp  LocalChatStorage.hpp  MediaCacheManager.hpp  MediaManager.hpp  StateManager.hpp  VoiceManager.hpp
client/src/: ChatArea.qml  ChatManager.cpp  Sidebar.qml  StateManager.cpp  chat.qml  main.cpp
client/src/core/: AuthManager.cpp  ChatManager.cpp  ConnectionManager.cpp  LocalChatStorage.cpp  MediaCacheManager.cpp  MediaManager.cpp  StateManager.cpp  VoiceManager.cpp  main.cpp
client/src/ui/: ChatArea.qml  MediaPickerPopup.qml  MediaPreviewDialog.qml  Sidebar.qml  chat.qml  main.qml  sign_in.qml  sign_up.qml
client/tests/: test_placeholder.cpp
common/include/dto/: .gitkeep
docs/: database_api.md  design_document_alyosha.md  server_api.md
server/: .dockerignore  CMakeLists.txt  Dockerfile  config.json
server/controllers/: ChatController.cc  ChatController.h  ServerWebSocketController.cc  ServerWebSocketController.h  UserController.cc  UserController.h  api_v1_ChatWebSocket.cc  api_v1_ChatWebSocket.h  api_v1_auth.cc  api_v1_auth.h  api_v1_chats.cc  api_v1_chats.h  api_v1_messages.cc  api_v1_messages.h  api_v1_users.cc  api_v1_users.h
server/drogon/: .clang-format
server/filters/: api_v1_AuthFilter.cc  api_v1_AuthFilter.h  api_v1_IpFilter.cc  api_v1_IpFilter.h  api_v1_JsonValidatorFilter.cc  api_v1_JsonValidatorFilter.h
server/include/dto/: AttachmentData.hpp  ChatPreview.hpp  ChatServiceDtos.hpp  ServicesDtoBase.hpp  UserServiceDtos.hpp
server/include/repositories/: AttachmentRepository.hpp  ChatRepository.hpp  MessageRepository.hpp  UserRepository.hpp
server/include/utils/: Enum.hpp  controller_utils.hpp  orm_utils.hpp  password_hasher.hpp  server_exceptions.hpp  server_response_macro.hpp
server/models/: Attachments.cc  Attachments.h  ChannelMembers.cc  ChannelMembers.h  Channels.cc  Channels.h  ChatMembers.cc  ChatMembers.h  Chats.cc  Chats.h  Messages.cc  Messages.h  Posts.cc  Posts.h  Reactions.cc  Reactions.h  Sessions.cc  Sessions.h  Users.cc  Users.h
server/nginx/: nginx.conf
server/services/: ChatService.cpp  ChatService.hpp  S3Service.cpp  S3Service.hpp  UserService.cpp  UserService.hpp
server/sql/: 001_initial_schema.sql  002_create_test_db.sh
server/src/: main.cc
server/src/repositories/: AttachmentRepository.cpp  ChatRepository.cpp  MessageRepository.cpp  UserRepository.cpp
server/src/utils/: controller_utils.cpp
server/tests/: main.cpp  test_chat_repository.cpp  test_message_repository.cpp  test_user_repository.cpp  user_service_test.cpp  users_controller_test.cpp
server/tests/controllers/: test_end_to_end.cpp
server/tests/fixtures/: AttachmentTestFixture.hpp  ChatTestFixture.hpp  ControllerTestFixture.hpp  DbTestFixture.hpp  MessageTestFixture.hpp  UserTestFixture.hpp
server/tests/mocks/: MockAttachmentRepository.hpp  MockChatRepository.hpp  MockMessageRepository.hpp  MockS3Service.hpp  MockUserRepository.hpp
server/tests/repositories/: test_attachment_repository.cpp  test_chat_repository.cpp  test_message_repository.cpp  test_user_repository.cpp
server/tests/service_unit_tests/: chat_service_test.cpp
server/tests/services/: test_chat_service.cpp  test_chat_service_dtos.cpp  test_user_serivce.cpp  test_user_service_dtos.cpp
